# ka3005p

./: .gitignore  404.html  Cargo.toml  Cargo.toml.orig  LICENSE  LICENSE-MIT  README.md  crates.js  datasheets.sh  development.html  help.html  index.html  justfile  print.html  pyproject.toml  ramp.py  search-index.js  searchindex.js  searchindex.json  settings.html  source-files.js  src-files.js
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: blank.md  bug.md  documentation.md  feature.md  refactoring.md  security.md
.github/actions/ka3005p-dev/: action.yml
.github/workflows/: cd.yml  ci.yml  gh-pages.yml  pr-merge.yml  pymodule.yml  rust.yml
doc/: book.toml
doc/src/: SUMMARY.md  development.md
examples/: pwr.rs
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/convert/: trait.From.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
implementors/core/str/traits/: trait.FromStr.js
ka3005p/: all.html  enum.Channel.html  enum.Command.html  enum.Lock.html  enum.Mode.html  enum.Switch.html  fn.find_serial_port.html  fn.list_serial_ports.html  index.html  sidebar-items.js  struct.Flags.html  struct.Ka3005p.html  struct.Status.html
python/: README.md
python/examples/: basics.py
python/ka3005p/: __init__.py  typeshed.pyi
scripts/: power_supply.py
src/: cli.rs  lib.rs  py_module.rs
src/ka3005p/: cli.rs.html  lib.rs.html
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/cmp/: trait.Eq.js  trait.PartialEq.js
trait.impl/core/convert/: trait.From.js
trait.impl/core/fmt/: trait.Debug.js  trait.Display.js
trait.impl/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
trait.impl/core/str/traits/: trait.FromStr.js
